updating index styling

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 <head>	
 	<title>SMRT BANNER</title>
 	<meta name="apple-itunes-app", content="app-id=<%=appId%>, app-argument=<%=appURL%>">
-	<link rel="stylesheet" href="/foundation/stylesheets/foundation.css" type="text/css" media="screen" charset="utf-8">
+	<link rel="stylesheet" href="/foundation/stylesheets/foundation.min.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
 	<div class="row">
@@ -26,6 +26,13 @@
 				</div>
 			</form>
 		</div>
+		<div class="two columns"></div>
+	</div>
+	<div class="row">
+		<div class="two columns"></div>
+		<footer class="eight columns">
+			<p style="text-align:center"><span class="secondary radius label">tweet me, <a href="http://www.twitter.com/brianmichel">@brianmichel</a></span></p>
+		</footer>
 		<div class="two columns"></div>
 	</div>
 </body>
